[wip] fix spacings

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -88,6 +88,7 @@ $font-styles: (
     $spacing-small: 8px;
     $spacing-medium: 16px;
     $spacing-large: 24px;
+    $spacing-x-large: 36px;
     $spacing-none: 0;
     // Borders
     $border: 1px solid $brand-color-main;
